implemented add note button in MainActivity.java

--- a/res/layout/add_note.xml
+++ b/res/layout/add_note.xml
@@ -2,10 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:focusableInTouchMode="true">
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/enterText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="top|left"
@@ -29,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/save"
         android:layout_alignBottom="@+id/save"
-        android:layout_marginLeft="48dp"
+        android:layout_marginLeft="45dp"
         android:layout_toRightOf="@+id/save"
         android:text="Cancel" />
 
