--- a/res/layout/view_notes.xml
+++ b/res/layout/view_notes.xml
@@ -8,7 +8,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ViewNotes" >
 
-    <TextView
+    <ListView
+        android:id="@id/android:list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
